==> Niugge/PX4Firmware/NuttX/nuttx/arch/arm/src/lpc214x/lpc214x_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <semaphore.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include <arch/serial.h>
#include "chip.h"
#include "up_arch.h"
#include "os_internal.h"
#include "up_internal.h"
#include "lpc214x_pinsel.h"
#include "lpc214x_uart.h"
#  define CONSOLE_DEV     g_uart0port
#  define TTYS0_DEV       g_uart0port
#  define TTYS1_DEV       g_uart1port
#  define CONSOLE_DEV     g_uart1port
#  define TTYS0_DEV       g_uart1port
#  define TTYS1_DEV       g_uart0port

static int up_setup(struct uart_dev_s *dev)
{
#ifndef CONFIG_SUPPRESS_LPC214X_UART_CONFIG
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  uint16_t baud;
  uint8_t lcr;

  /* Clear fifos */

  up_serialout(priv, LPC214X_UART_FCR_OFFSET,
               (LPC214X_FCR_RX_FIFO_RESET|LPC214X_FCR_TX_FIFO_RESET));

  /* Set trigger */

  up_serialout(priv, LPC214X_UART_FCR_OFFSET,
               (LPC214X_FCR_FIFO_ENABLE|LPC214X_FCR_FIFO_TRIG14));

  /* Set up the IER */

  priv->ier = up_serialin(priv, LPC214X_UART_IER_OFFSET);

  /* Set up the LCR */

  lcr = 0;

  if (priv->bits == 7)
    {
      lcr |= LPC214X_LCR_CHAR_7;
    }
  else
    {
      lcr |= LPC214X_LCR_CHAR_8;
    }

  if (priv->stopbits2)
    {
      lcr |= LPC214X_LCR_STOP_2;
    }

  if (priv->parity == 1)
    {
      lcr |= LPC214X_LCR_PAR_ODD;
    }
  else if (priv->parity == 2)
    {
      lcr |= LPC214X_LCR_PAR_EVEN;
    }

  /* Enter DLAB=1 */

  up_serialout(priv, LPC214X_UART_LCR_OFFSET,
               (lcr | LPC214X_LCR_DLAB_ENABLE));

  /* Set the BAUD divisor */

  baud = UART_BAUD(priv->baud);
  up_serialout(priv, LPC214X_UART_DLM_OFFSET, baud >> 8);
  up_serialout(priv, LPC214X_UART_DLL_OFFSET, baud & 0xff);

  /* Clear DLAB */

  up_serialout(priv, LPC214X_UART_LCR_OFFSET, lcr);

  /* Configure the FIFOs */

  up_serialout(priv, LPC214X_UART_FCR_OFFSET,
               (LPC214X_FCR_FIFO_TRIG8|LPC214X_FCR_TX_FIFO_RESET|\
                LPC214X_FCR_RX_FIFO_RESET|LPC214X_FCR_FIFO_ENABLE));

  /* The NuttX serial driver waits for the first THRE interrrupt before
   * sending serial data... However, it appears that the lpc214x hardware
   * does not generate that interrupt until a transition from not-empty
   * to empty.  So, the current kludge here is to send one NULL at
   * startup to kick things off.
   */

  up_serialout(priv, LPC214X_UART_THR_OFFSET, '\0');
#endif
  return OK;
}

static int up_interrupt(int irq, void *context)
{
  struct uart_dev_s *dev = NULL;
  struct up_dev_s   *priv;
  uint8_t            status;
  int                passes;

  if (g_uart1priv.irq == irq)
    {
      dev = &g_uart1port;
    }
  else if (g_uart0priv.irq == irq)
    {
      dev = &g_uart0port;
    }
  else
    {
      PANIC();
    }
  priv = (struct up_dev_s*)dev->priv;

  /* Loop until there are no characters to be transferred or,
   * until we have been looping for a long time.
   */

  for (passes = 0; passes < 256; passes++)
    {
      /* Get the current UART status and check for loop
       * termination conditions
       */

       status = up_serialin(priv, LPC214X_UART_IIR_OFFSET);

      /* The NO INTERRUPT should be zero if there are pending
       * interrupts
       */

      if ((status & LPC214X_IIR_NO_INT) != 0)
        {
          /* Break out of the loop when there is no longer a
           * pending interrupt
           */

          break;
        }

      /* Handle the interrupt by its interrupt ID field */

      switch (status & LPC214X_IIR_MASK)
        {
          /* Handle incoming, receive bytes (with or without timeout) */

          case LPC214X_IIR_RDA_INT:
          case LPC214X_IIR_CTI_INT:
            {
              uart_recvchars(dev);
              break;
            }

          /* Handle outgoing, transmit bytes */

          case LPC214X_IIR_THRE_INT:
            {
              uart_xmitchars(dev);
              break;
            }

          /* Just clear modem status interrupts (UART1 only) */

          case LPC214X_IIR_MS_INT:
            {
              /* Read the modem status register (MSR) to clear */

              status = up_serialin(priv, LPC214X_UART_MSR_OFFSET);
              vdbg("MSR: %02x\n", status);
              break;
            }

          /* Just clear any line status interrupts */

          case LPC214X_IIR_RLS_INT:
            {
              /* Read the line status register (LSR) to clear */

              status = up_serialin(priv, LPC214X_UART_LSR_OFFSET);
              vdbg("LSR: %02x\n", status);
              break;
            }

          /* There should be no other values */

          default:
            {
              dbg("Unexpected IIR: %02x\n", status);
              break;
            }
        }
    }
    return OK;
}

static int up_receive(struct uart_dev_s *dev, uint32_t *status)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  uint8_t rbr;

  *status = up_serialin(priv, LPC214X_UART_LSR_OFFSET);
  rbr     = up_serialin(priv, LPC214X_UART_RBR_OFFSET);
  return rbr;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->ier |= LPC214X_IER_ERBFI;
#endif
    }
  else
    {
      priv->ier &= ~LPC214X_IER_ERBFI;
    }
  up_serialout(priv, LPC214X_UART_IER_OFFSET, priv->ier);
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  return ((up_serialin(priv, LPC214X_UART_LSR_OFFSET) & LPC214X_LSR_RDR) != 0);
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->ier |= LPC214X_IER_ETBEI;
#endif
    }
  else
    {
      priv->ier &= ~LPC214X_IER_ETBEI;
    }
  up_serialout(priv, LPC214X_UART_IER_OFFSET, priv->ier);
}

static bool up_txready(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s*)dev->priv;
  return ((up_serialin(priv, LPC214X_UART_LSR_OFFSET) & LPC214X_LSR_THRE) != 0);
}

void up_earlyserialinit(void)
{
  /* Enable UART0 and 1 */

  uint32_t pinsel = getreg32(LPC214X_PINSEL0);
  pinsel &= ~(LPC214X_UART0_PINMASK|LPC214X_UART1_PINMASK);
  pinsel |= (LPC214X_UART0_PINSEL|LPC214X_UART1_PINSEL);
  putreg32(pinsel, LPC214X_PINSEL0);

  /* Disable both UARTS */

  up_disableuartint(TTYS0_DEV.priv, NULL);
  up_disableuartint(TTYS1_DEV.priv, NULL);

  /* Configuration whichever one is the console */

  CONSOLE_DEV.isconsole = true;
  up_setup(&CONSOLE_DEV);
}

int up_putc(int ch)
{
  struct up_dev_s *priv = (struct up_dev_s*)CONSOLE_DEV.priv;
  uint8_t ier;

  up_disableuartint(priv, &ier);
  up_waittxready(priv);
  up_serialout(priv, LPC214X_UART_THR_OFFSET, (uint8_t)ch);

  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_waittxready(priv);
      up_serialout(priv, LPC214X_UART_THR_OFFSET, '\r');
    }

  up_waittxready(priv);
  up_restoreuartint(priv, ier);
  return ch;
}

int up_putc(int ch)
{
  /* Check for LF */

  if (ch == '\n')
    {
      /* Add CR */

      up_lowputc('\r');
    }

  up_lowputc(ch);
  return ch;
}
